--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -1,8 +1,8 @@
-<iframe src="https://embed.spotify.com/?uri=spotify:user:spotify:playlist:3rgsDhGHZxZ9sB9DQWQfuf" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-
+<iframe src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
 <!-- <img src="<%= @daily_image_url %>" alt="nasa picture"> -->
 
 <img class="bg" src="<%=  @daily_image_url %>" alt="nasa image of space">
+
 <div>
 <%= strip_tags @quote %>
 </div>
