some cosmetic changes, divs , background transparencies.

--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -3,6 +3,8 @@
 
 <img class="bg" src="<%=  @daily_image_url %>" alt="nasa image of space">
 
-<div>
-<%= strip_tags @quote %>
+<div style="background:transparent" class="jumbotron jumbotron-fluid">
+  <div style="background:transparent" class="container">
+    <h2 style="color:lightgrey"><%= strip_tags @quote %></h2>
+  </div>
 </div>
