--- a/app/assets/stylesheets/space.scss
+++ b/app/assets/stylesheets/space.scss
@@ -17,3 +17,18 @@ img.bg {
   z-index: -1;
 
 }
+.jumbotron {
+  //  background: /* This is for ie8 and below */
+   background: none;
+   background-color: none;
+}
+.jumbotron-fluid {
+  //  background: rgb(200, 54, 54); /* This is for ie8 and below */
+  //  background: rgba(200, 54, 54, 0.5);
+   background: none;
+       background-color: none;
+}
+.container {
+   background: rgb(200, 54, 54); /* This is for ie8 and below */
+   background: rgba(200, 54, 54, 0.5);
+}
