added title to the space picture

--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -6,5 +6,8 @@
 <div style="background:transparent" class="jumbotron jumbotron-fluid">
   <div style="background:transparent" class="container">
     <h2 style="color:lightgrey"><%= strip_tags @quote %></h2>
+
+
+    <p style="color:lightgrey"><%= strip_tags @title %></p>
   </div>
 </div>
