added twitter button

--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -1,13 +1,31 @@
-<iframe src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
-<!-- <img src="<%= @daily_image_url %>" alt="nasa picture"> -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Space Out</title>
+    <script src="https://use.fontawesome.com/1569c93a06.js"></script>
+  </head>
+  <body>
+    <iframe src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
+    <!-- <img src="<%= @daily_image_url %>" alt="nasa picture"> -->
 
-<img class="bg" src="<%=  @daily_image_url %>" alt="nasa image of space">
+    <img class="bg" src="<%=  @daily_image_url %>" alt="nasa image of space">
 
-<div style="background:transparent" class="jumbotron jumbotron-fluid">
-  <div style="background:transparent" class="container">
-    <h2 style="color:lightgrey"><%= strip_tags @quote %></h2>
+    <div style="background:transparent" class="jumbotron jumbotron-fluid">
+      <div style="background:transparent" class="container">
+        <h2 style="color:lightgrey"><%= strip_tags  @quote %></h2>
 
 
-    <p style="color:lightgrey"><%= strip_tags @title %></p>
-  </div>
+        <p style="color:lightgrey"><%= strip_tags @title %></p>
+
+        <a class="twitter-share-button"
+        href="https://twitter.com/intent/tweet?text=<%="#{strip_tags @quote}"%>"
+        data-size="large">
+        <i class="fa fa-twitter" aria-hidden="true" fa-5x></i> Tweet</a>
+        </div>
+    </div>
+
+  </body>
+</html>
+
 </div>
