--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Space Out</title>
     <script src="https://use.fontawesome.com/1569c93a06.js"></script>
-  </head>
-  <body>
+  </head> -->
+  <!-- <body> -->
     <iframe src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
     <!-- <img src="<%= @daily_image_url %>" alt="nasa picture"> -->
 
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-  </body>
+  <!-- </body>
 </html>
 
-</div>
+</div> -->
