--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -1,20 +1,7 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Space Out</title>
-<<<<<<< HEAD
-    <script src="https://use.fontawesome.com/1569c93a06.js"></script>
-  </head> -->
-  <!-- <body> -->
-    <iframe src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
-    <!-- <img src="<%= @daily_image_url %>" alt="nasa picture"> -->
-=======
+
 
   </head>
-  <body> -->
-
->>>>>>> 4a692917cbff9da73df7a65b13f893a4c43efdfc
+  <body>
 
     <img class="bg" src="<%=  @daily_image_url %>" alt="nasa image of space">
 
@@ -24,26 +11,23 @@
 
 
         <p style="color:lightgrey"><%= strip_tags @title %></p>
-
+        <p style="color:lightgrey"><%= @time %></p>
         <a class="twitter-share-button"
         href="https://twitter.com/intent/tweet?text=<%="#{strip_tags @quote}"%>"
         data-size="large">
         <i class="fa fa-twitter" aria-hidden="true" fa-5x></i> Tweet</a>
 
         </div>
-      
-    </div>
-<<<<<<< HEAD
 
-  <!-- </body>
-=======
+    </div>
+
     <div class="iframe">
       <iframe src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
       <!-- <img src="<%= @daily_image_url %>" alt="nasa picture"> -->
     </div>
   </body>
 
->>>>>>> 4a692917cbff9da73df7a65b13f893a4c43efdfc
+
 </html>
 
-</div> -->
+</div>
