--- a/app/assets/stylesheets/space.scss
+++ b/app/assets/stylesheets/space.scss
@@ -36,11 +36,7 @@ img.bg {
    background: rgba(200, 54, 54, 0.5);
 }
 
-#iframe {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-}
+
 
 .floating{
     float: left;
@@ -142,4 +138,8 @@ input#password {
 
 input[type="submit"] {
   color: black;
+}
+
+iframe {
+  border-radius: 8px;
 }
