fixed twitter icon

--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -17,7 +17,8 @@
         <a class="twitter-share-button"
         href="https://twitter.com/intent/tweet?text=<%="#{strip_tags @quote}"%>"
         data-size="large">
-        <i class="fa fa-twitter" aria-hidden="true" fa-5x></i> Tweet</a>
+        <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> Tweet</a>
+
 
         </div>
 
