--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -14,19 +14,15 @@
 <!-- QUOTE -->
 <div class="floating">
   <div style="background:transparent" class="text-center container">
-    <h4 class="text-center" style="color:lightgrey"><%= strip_tags  @quote %></h4>
+    <h4 class="text-center" style="color:lightgrey"><%= strip_tags  @quote %><a class="twitter-share-button"
+    href="https://twitter.com/intent/tweet?text=<%="#{strip_tags @quote}"%>"
+    data-size="large">
+    <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> Tweet</a></h4>
   </div>
 </div>
 <!-- TWITTER -->
-<div style="background:transparent" class="jumbotron jumbotron-fluid">
-  <div style="background:transparent" class="container text-center">
 
-    <a class="twitter-share-button"
-    href="https://twitter.com/intent/tweet?text=<%="#{strip_tags @quote}"%>"
-    data-size="large">
-    <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> Tweet</a>
-  </div>
-</div>
+<!-- </div> -->
 </div>
 </div>
 
@@ -51,12 +47,13 @@
 
   <!-- Button trigger modal -->
   <!-- Music player -->
-  <div style="background:transparent" class="container pull-right">
-    <iframe class="pull-right" src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
+  <div style="background:transparent">
+    <!-- <div style="background:transparent" class="container pull-right"> -->
+    <iframe class="spotify-div" src="https://embed.spotify.com/?uri=spotify:user:t1310:playlist:5MVfrynGEanhTozPba4OcK" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
   </div>
   <!-- background picture title -->
-  <div class="row force-to-bottom">
-    <div style="background:transparent " style="position:absolute;bottom:5px;right:5px;margin:0;padding:5px 3px;" class="container pull-left">
+  <div class="picture-title">
+    <!-- <div style="background:transparent " style="position:absolute;bottom:5px;right:5px;margin:0;padding:5px 3px;" class="container pull-left"> -->
       <p style="color:lightgrey"><%= strip_tags @title %></p>
     </div>
   </div>
