timezone fix for heroku

--- a/app/views/space/index.html.erb
+++ b/app/views/space/index.html.erb
@@ -22,7 +22,7 @@
 
   <div style="background:transparent" class="text-center container">
     <a class="twitter-share-button"
-    href="https://twitter.com/intent/tweet?text=<%="#{strip_tags @quote}"%>"
+    target="_blank" href="https://twitter.com/intent/tweet?text=<%="#{strip_tags @quote}"%>"
     data-size="large">
     <i class="fa fa-twitter fa-2x" aria-hidden="true"></i> Tweet</a></h4>
   </div>
